[package]
name = "image-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12" }

# Image processing
image = "0.25"

# TUI
ratatui = "0.30"
crossterm = "0.28"

# Metrics
sysinfo = "0.32"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
tokio-stream = "0.1"
rand = "0.9.2"
sha2 = "0.10.9"
md5 = "0.8.0"

[dev-dependencies]
tokio-test = "0.4"
