[package]
name = "flux"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
futures = "0.3.31"
image = "0.25.9"
md5 = "0.8.0"
rand = "0.9.2"
ratatui = "0.30.0"
reqwest = "0.13.1"
sha2 = "0.10.9"
sysinfo = "0.32"
tabled = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4.5"
